--- a/_config/site.yml
+++ b/_config/site.yml
@@ -1,5 +1,8 @@
 title: Les Cast Codeurs Podcast
 
+profiles:
+  development:
+    disqus_developer: true
+
 google_analytics: UA-3479508-5
 flattr_username: epbernard
-
