htaccess rules from yyyy/mm/dd to yyyy-mm-dd

--- a/.htaccess
+++ b/.htaccess
@@ -7,4 +7,81 @@ RewriteEngine on
 
 RewriteCond %{HTTP_HOST} ^lescastcodeurs.com$
 
+# images
 RewriteRule ^img/jecoute_les_castcodeurs_200px.png$ /images/promo/jecoute_les_castcodeurs_200px.png
+
+# old feed redirected
+#RewriteRule feed/ http://lescastcodeurs.com/feed [R=301,L]
+
+# Manual redirect form old URL scheme yyyy/mm to new blog yyyy/mm/dd
+RewriteRule 2009/03/en-construction[/]? http://lescastcodeurs.com/2009/03/25/en-construction/ [R=301,L]
+RewriteRule 2009/04/le-premier-episode-est-enregistre[/]? http://lescastcodeurs.com/2009/04/08/le-premier-episode-est-enregistre/ [R=301,L]
+RewriteRule 2009/04/les-cast-codeurs-podcast-episode-1[/]? http://lescastcodeurs.com/2009/04/12/les-cast-codeurs-podcast-episode-1/ [R=301,L]
+RewriteRule 2009/04/google-group-lescastcodeurs[/]? http://lescastcodeurs.com/2009/04/22/google-group-lescastcodeurs/ [R=301,L]
+RewriteRule 2009/04/les-cast-codeurs-podcast-episode-2[/]? http://lescastcodeurs.com/2009/04/27/les-cast-codeurs-podcast-episode-2/ [R=301,L]
+RewriteRule 2009/05/les-cast-codeurs-ont-un-logo[/]? http://lescastcodeurs.com/2009/05/03/les-cast-codeurs-ont-un-logo/ [R=301,L]
+RewriteRule 2009/05/les-cast-codeurs-podcast-episode-3[/]? http://lescastcodeurs.com/2009/05/10/les-cast-codeurs-podcast-episode-3/ [R=301,L]
+RewriteRule 2009/05/les-cast-codeurs-podcast-episode-4[/]? http://lescastcodeurs.com/2009/05/25/les-cast-codeurs-podcast-episode-4/ [R=301,L]
+RewriteRule 2009/05/bouton-jecoute-les-cast-codeurs[/]? http://lescastcodeurs.com/2009/05/31/bouton-jecoute-les-cast-codeurs/ [R=301,L]
+RewriteRule 2009/06/les-cast-codeurs-episode-5-special-javaone[/]? http://lescastcodeurs.com/2009/06/09/les-cast-codeurs-episode-5-special-javaone/ [R=301,L]
+RewriteRule 2009/06/les-cast-codeurs-podcast-episode-6-portal-ma[/]? http://lescastcodeurs.com/2009/06/21/les-cast-codeurs-podcast-episode-6-portal-ma/ [R=301,L]
+RewriteRule 2009/07/les-cast-codeurs-sur-twitter-lescastcodeurs[/]? http://lescastcodeurs.com/2009/07/30/les-cast-codeurs-sur-twitter-lescastcodeurs/ [R=301,L]
+RewriteRule 2009/08/les-cast-codeurs-podcast-episode-7-le-dsl-et-ses-amantes[/]? http://lescastcodeurs.com/2009/08/01/les-cast-codeurs-podcast-episode-7-le-dsl-et-ses-amantes/ [R=301,L]
+RewriteRule 2009/08/les-cast-codeurs-podcast-episode-8-interview-de-romain-guy-sur-google-android[/]? http://lescastcodeurs.com/2009/08/26/les-cast-codeurs-podcast-episode-8-interview-de-romain-guy-sur-google-android/ [R=301,L]
+RewriteRule 2009/09/les-cast-codeurs-podcast-episode-9-tout-le-monde-rachete-tout-le-monde[/]? http://lescastcodeurs.com/2009/09/27/les-cast-codeurs-podcast-episode-9-tout-le-monde-rachete-tout-le-monde/ [R=301,L]
+RewriteRule 2009/10/les-cast-codeurs-podcast-episode-10-alain-gillot-petre-computing[/]? http://lescastcodeurs.com/2009/10/09/les-cast-codeurs-podcast-episode-10-alain-gillot-petre-computing/ [R=301,L]
+RewriteRule 2009/11/les-cast-codeurs-episode-11-les-predictions-de-loracle-et-la-dette-technique[/]? http://lescastcodeurs.com/2009/11/08/les-cast-codeurs-episode-11-les-predictions-de-loracle-et-la-dette-technique/ [R=301,L]
+RewriteRule 2009/11/les-cast-codeurs-episode-12-special-devoxx-2009[/]? http://lescastcodeurs.com/2009/11/20/les-cast-codeurs-episode-12-special-devoxx-2009/ [R=301,L]
+RewriteRule 2009/12/les-cast-codeurs-episode-13-interview-de-jean-francois-arcand-sur-atmosphere[/]? http://lescastcodeurs.com/2009/12/09/les-cast-codeurs-episode-13-interview-de-jean-francois-arcand-sur-atmosphere/ [R=301,L]
+RewriteRule 2009/12/les-cast-codeurs-podcast-episode-14-les-previsions-du-bilan-et-le-bilan-des-previsions[/]? http://lescastcodeurs.com/2009/12/25/les-cast-codeurs-podcast-episode-14-les-previsions-du-bilan-et-le-bilan-des-previsions/ [R=301,L]
+RewriteRule 2010/01/les-cast-codeurs-podcast-episode-15-interview-de-didier-girard-et-guillaume-laforge-sur-google-app-engine[/]? http://lescastcodeurs.com/2010/01/18/les-cast-codeurs-podcast-episode-15-interview-de-didier-girard-et-guillaume-laforge-sur-google-app-engine/ [R=301,L]
+RewriteRule 2010/01/les-cast-codeurs-podcast-episode-16-le-seul-podcast-java-cette-semaine-qui-ne-parle-pas-du-webcast-de-snoracle[/]? http://lescastcodeurs.com/2010/01/30/les-cast-codeurs-podcast-episode-16-le-seul-podcast-java-cette-semaine-qui-ne-parle-pas-du-webcast-de-snoracle/ [R=301,L]
+RewriteRule 2010/02/les-cast-codeurs-podcast-episode-17-interview-de-guillaume-bort-sur-play-framework[/]? http://lescastcodeurs.com/2010/02/20/les-cast-codeurs-podcast-episode-17-interview-de-guillaume-bort-sur-play-framework/ [R=301,L]
+RewriteRule 2010/03/les-cast-codeurs-podcast-episode-18-invite-special-alexis-moussine-pouchkine-de-sun-france-oracle[/]? http://lescastcodeurs.com/2010/03/17/les-cast-codeurs-podcast-episode-18-invite-special-alexis-moussine-pouchkine-de-sun-france-oracle/ [R=301,L]
+RewriteRule 2010/03/les-cast-codeurs-podcast-episode-19-interview-independents-partie-1-mathilde-lemee-nicolas-martignole-et-antonio-goncalves-cassent-du-sucre-sur-les-ssii[/]? http://lescastcodeurs.com/2010/03/27/les-cast-codeurs-podcast-episode-19-interview-independents-partie-1-mathilde-lemee-nicolas-martignole-et-antonio-goncalves-cassent-du-sucre-sur-les-ssii/ [R=301,L]
+RewriteRule 2010/04/les-cast-codeurs-podcast-episode-20-oracle-je-taime-moi-non-plus-et-linvasion-des-lapins[/]? http://lescastcodeurs.com/2010/04/18/les-cast-codeurs-podcast-episode-20-oracle-je-taime-moi-non-plus-et-linvasion-des-lapins/ [R=301,L]
+RewriteRule 2010/04/les-cast-codeurs-podcast-episode-21-interview-independents-partie-2-aucune-ssii-na-ete-martyrisee-pendant-lenregistrement[/]? http://lescastcodeurs.com/2010/04/27/les-cast-codeurs-podcast-episode-21-interview-independents-partie-2-aucune-ssii-na-ete-martyrisee-pendant-lenregistrement/ [R=301,L]
+RewriteRule 2010/05/video-promo-les-cast-codeurs-a-luniversite-du-si-2010[/]? http://lescastcodeurs.com/2010/05/07/video-promo-les-cast-codeurs-a-luniversite-du-si-2010/ [R=301,L]
+RewriteRule 2010/05/les-cast-codeurs-podcast-episode-22-tupperware-et-tuplewar[/]? http://lescastcodeurs.com/2010/05/17/les-cast-codeurs-podcast-episode-22-tupperware-et-tuplewar/ [R=301,L]
+RewriteRule 2010/05/les-cast-codeurs-podcast-episode-23-interviewWed May 26 08:43:07 20102Wed0dvcs-et-git-jai-vu-la-lumiere-avecWed May 26 08:43:07 20102Wed0david-gageot-dalgodeal[/]? http://lescastcodeurs.com/2010/05/26/les-cast-codeurs-podcast-episode-23-interviewWed May 26 08:43:07 20102Wed0dvcs-et-git-jai-vu-la-lumiere-avecWed May 26 08:43:07 20102Wed0david-gageot-dalgodeal/ [R=301,L]
+RewriteRule 2010/06/les-cast-codeurs-explosent-la-barre-des-4000[/]? http://lescastcodeurs.com/2010/06/01/les-cast-codeurs-explosent-la-barre-des-4000/ [R=301,L]
+RewriteRule 2010/06/les-cast-codeurs-podcast-episode-24-entree-sortie[/]? http://lescastcodeurs.com/2010/06/18/les-cast-codeurs-podcast-episode-24-entree-sortie/ [R=301,L]
+RewriteRule 2010/07/flattr-payer-les-choses-que-vous-aimer[/]? http://lescastcodeurs.com/2010/07/07/flattr-payer-les-choses-que-vous-aimer/ [R=301,L]
+RewriteRule 2010/07/les-cast-codeurs-podcast-episode-25-interview-du-public-en-direct-de-lusi-2010[/]? http://lescastcodeurs.com/2010/07/25/les-cast-codeurs-podcast-episode-25-interview-du-public-en-direct-de-lusi-2010/ [R=301,L]
+RewriteRule 2010/08/les-cast-codeurs-podcast-episode-26-oracle-casse-et-les-cast-codeurs-flattrent[/]? http://lescastcodeurs.com/2010/08/18/les-cast-codeurs-podcast-episode-26-oracle-casse-et-les-cast-codeurs-flattrent/ [R=301,L]
+RewriteRule 2010/09/lepisode-25-usi-2010-en-video-est-arrive[/]? http://lescastcodeurs.com/2010/09/09/lepisode-25-usi-2010-en-video-est-arrive/ [R=301,L]
+RewriteRule 2010/09/les-cast-codeurs-podcast-episode-27-interview-sur-graniteds-avec-franck-wolff-et-william-drai[/]? http://lescastcodeurs.com/2010/09/12/les-cast-codeurs-podcast-episode-27-interview-sur-graniteds-avec-franck-wolff-et-william-drai/ [R=301,L]
+RewriteRule 2010/09/les-cast-codeurs-podcast-episode-28-javaone-2010-le-rap-de-larry[/]? http://lescastcodeurs.com/2010/09/25/les-cast-codeurs-podcast-episode-28-javaone-2010-le-rap-de-larry/ [R=301,L]
+RewriteRule 2010/10/les-cast-codeurs-au-monde-en-tique-ce-samedi[/]? http://lescastcodeurs.com/2010/10/18/les-cast-codeurs-au-monde-en-tique-ce-samedi/ [R=301,L]
+RewriteRule 2010/10/les-cast-codeurs-podcast-episode-29-la-forge-logicielle-et-lindustrialisation-chez-un-editeur-guest-star-vincent-massol-mais-aussi-nicolas-de-loof-et-arnaud-heritier[/]? http://lescastcodeurs.com/2010/10/19/les-cast-codeurs-podcast-episode-29-la-forge-logicielle-et-lindustrialisation-chez-un-editeur-guest-star-vincent-massol-mais-aussi-nicolas-de-loof-et-arnaud-heritier/ [R=301,L]
+RewriteRule 2010/11/les-cast-codeurs-podcast-episode-30-java-et-le-mouvement-brownien[/]? http://lescastcodeurs.com/2010/11/03/les-cast-codeurs-podcast-episode-30-java-et-le-mouvement-brownien/ [R=301,L]
+RewriteRule 2010/11/les-cast-codeurs-podcast-episode-31-special-devoxx-2010[/]? http://lescastcodeurs.com/2010/11/20/les-cast-codeurs-podcast-episode-31-special-devoxx-2010/ [R=301,L]
+RewriteRule 2010/12/les-cast-codeurs-podcast-episode-32-interview-sur-izpack-avec-julien-ponge[/]? http://lescastcodeurs.com/2010/12/05/les-cast-codeurs-podcast-episode-32-interview-sur-izpack-avec-julien-ponge/ [R=301,L]
+RewriteRule 2011/01/les-cast-codeurs-podcast-episode-33-on-pousse-la-chansonnette[/]? http://lescastcodeurs.com/2011/01/05/les-cast-codeurs-podcast-episode-33-on-pousse-la-chansonnette/ [R=301,L]
+RewriteRule 2011/01/les-cast-codeurs-podcast-episode-34-interview-sur-flex-avec-francois-le-droff-et-michael-chaize-2[/]? http://lescastcodeurs.com/2011/01/23/les-cast-codeurs-podcast-episode-34-interview-sur-flex-avec-francois-le-droff-et-michael-chaize-2/ [R=301,L]
+RewriteRule 2011/02/les-cast-codeurs-podcast-episode-35-leerooooooooy-jenkiiiiiiiinnnns[/]? http://lescastcodeurs.com/2011/02/13/les-cast-codeurs-podcast-episode-35-leerooooooooy-jenkiiiiiiiinnnns/ [R=301,L]
+RewriteRule 2011/03/les-cast-codeurs-podcast-episode-36-interview-sur-lopen-source-des-par-et-pour-les-cast-codeurs[/]? http://lescastcodeurs.com/2011/03/10/les-cast-codeurs-podcast-episode-36-interview-sur-lopen-source-des-par-et-pour-les-cast-codeurs/ [R=301,L]
+RewriteRule 2011/04/les-cast-codeurs-podcast-episode-37-jpeux-pas-jai-piscine[/]? http://lescastcodeurs.com/2011/04/05/les-cast-codeurs-podcast-episode-37-jpeux-pas-jai-piscine/ [R=301,L]
+RewriteRule 2011/04/les-cast-codeurs-podcast-episode-38-special-snowcamp-2011[/]? http://lescastcodeurs.com/2011/04/26/les-cast-codeurs-podcast-episode-38-special-snowcamp-2011/ [R=301,L]
+RewriteRule 2011/05/les-cast-codeurs-podcast-episode-39-en-direct-de-la-loge-du-gardien-a-geecon[/]? http://lescastcodeurs.com/2011/05/16/les-cast-codeurs-podcast-episode-39-en-direct-de-la-loge-du-gardien-a-geecon/ [R=301,L]
+RewriteRule 2011/06/les-cast-codeurs-podcast-episode-40-whats-next-paris-et-la-permission-de-minuit[/]? http://lescastcodeurs.com/2011/06/18/les-cast-codeurs-podcast-episode-40-whats-next-paris-et-la-permission-de-minuit/ [R=301,L]
+RewriteRule 2011/06/les-cast-codeurs-podcast-episode-41-interview-detienne-juliot-sur-eclipse[/]? http://lescastcodeurs.com/2011/06/25/les-cast-codeurs-podcast-episode-41-interview-detienne-juliot-sur-eclipse/ [R=301,L]
+RewriteRule 2011/07/8884[/]? http://lescastcodeurs.com/2011/07/01/8884/ [R=301,L]
+RewriteRule 2011/07/les-cast-codeurs-podcast-episode-42-a-lusi-2011[/]? http://lescastcodeurs.com/2011/07/19/les-cast-codeurs-podcast-episode-42-a-lusi-2011/ [R=301,L]
+RewriteRule 2011/07/les-cast-codeurs-podcast-episode-43-openjdk-et-java-7-avec-henri-gomez[/]? http://lescastcodeurs.com/2011/07/25/les-cast-codeurs-podcast-episode-43-openjdk-et-java-7-avec-henri-gomez/ [R=301,L]
+RewriteRule 2011/08/les-cast-codeurs-podcast-episode-44-mains-dans-le-cambouis-et-outils-a-gogo[/]? http://lescastcodeurs.com/2011/08/18/les-cast-codeurs-podcast-episode-44-mains-dans-le-cambouis-et-outils-a-gogo/ [R=301,L]
+RewriteRule 2011/08/les-cast-codeurs-podcast-episode-45-methodes-agiles-avec-jean-laurent-de-morlhon-et-arnaud-heritier[/]? http://lescastcodeurs.com/2011/08/25/les-cast-codeurs-podcast-episode-45-methodes-agiles-avec-jean-laurent-de-morlhon-et-arnaud-heritier/ [R=301,L]
+RewriteRule 2011/09/les-cast-codeurs-podcast-episode-46-le-blog-qui-valait-3-milliards[/]? http://lescastcodeurs.com/2011/09/24/les-cast-codeurs-podcast-episode-46-le-blog-qui-valait-3-milliards/ [R=301,L]
+RewriteRule 2011/10/les-cast-codeurs-podcast-episode-47-javaone-2011-le-retour[/]? http://lescastcodeurs.com/2011/10/14/les-cast-codeurs-podcast-episode-47-javaone-2011-le-retour/ [R=301,L]
+RewriteRule 2011/11/les-cast-codeurs-podcast-episode-48-doctor-love-is-back-wazzaaaaaaaa[/]? http://lescastcodeurs.com/2011/11/05/les-cast-codeurs-podcast-episode-48-doctor-love-is-back-wazzaaaaaaaa/ [R=301,L]
+RewriteRule 2011/11/les-cast-codeurs-podcast-episode-49-devoxx-2011-les-dix-ans[/]? http://lescastcodeurs.com/2011/11/28/les-cast-codeurs-podcast-episode-49-devoxx-2011-les-dix-ans/ [R=301,L]
+RewriteRule 2011/12/les-cast-codeurs-podcasts-episodes-50-lanniversaire[/]? http://lescastcodeurs.com/2011/12/16/les-cast-codeurs-podcasts-episodes-50-lanniversaire/ [R=301,L]
+RewriteRule 2012/01/les-cast-codeurs-podcast-episode-51-ios-et-le-mobile-avec-jean-francois-grang-premiere-partie[/]? http://lescastcodeurs.com/2012/01/06/les-cast-codeurs-podcast-episode-51-ios-et-le-mobile-avec-jean-francois-grang-premiere-partie/ [R=301,L]
+RewriteRule 2012/01/les-cast-codeurs-podcast-episode-52-ios-et-le-mobile-avec-jean-francois-grang-deuxieme-partie[/]? http://lescastcodeurs.com/2012/01/26/les-cast-codeurs-podcast-episode-52-ios-et-le-mobile-avec-jean-francois-grang-deuxieme-partie/ [R=301,L]
+RewriteRule 2012/02/les-cast-codeurs-podcast-episodes-53-free-of-acta[/]? http://lescastcodeurs.com/2012/02/12/les-cast-codeurs-podcast-episodes-53-free-of-acta/ [R=301,L]
+RewriteRule 2012/03/les-cast-codeurs-podcast-episode-54-interview-dojo-toolkit-avec-emmanuel-tissandier[/]? http://lescastcodeurs.com/2012/03/01/les-cast-codeurs-podcast-episode-54-interview-dojo-toolkit-avec-emmanuel-tissandier/ [R=301,L]
+RewriteRule 2012/03/les-cast-codeurs-podcast-episode-55-la-tva-est-en-sus[/]? http://lescastcodeurs.com/2012/03/13/les-cast-codeurs-podcast-episode-55-la-tva-est-en-sus/ [R=301,L]
+RewriteRule 2012/03/les-cast-codeurs-podcast-episode-56-interview-ceylon-avec-stephane-epardaud-et-emmanuel-bernard[/]? http://lescastcodeurs.com/2012/03/31/les-cast-codeurs-podcast-episode-56-interview-ceylon-avec-stephane-epardaud-et-emmanuel-bernard/ [R=301,L]
+RewriteRule 2012/04/les-cast-codeurs-podcast-episode-57-en-direct-de-devoxx-france-2012[/]? http://lescastcodeurs.com/2012/04/21/les-cast-codeurs-podcast-episode-57-en-direct-de-devoxx-france-2012/ [R=301,L]
+RewriteRule 2012/05/les-cast-codeurs-podcast-episode-58-interview-sur-gatling-avec-stephane-landelle[/]? http://lescastcodeurs.com/2012/05/06/les-cast-codeurs-podcast-episode-58-interview-sur-gatling-avec-stephane-landelle/ [R=301,L]
+RewriteRule 2012/05/les-cast-codeurs-podcast-episode-59-jitton-ritton-et-guitton-sont-dans-une-permgen[/]? http://lescastcodeurs.com/2012/05/21/les-cast-codeurs-podcast-episode-59-jitton-ritton-et-guitton-sont-dans-une-permgen/ [R=301,L]
