--- a/.htaccess
+++ b/.htaccess
@@ -14,8 +14,8 @@ RewriteRule ^podcast\-rss$ "http\:\/\/lescastcodeurs\.libsyn\.com\/rss" [R=302,L
 # images
 RewriteRule ^img/jecoute_les_castcodeurs_200px.png$ /images/promo/jecoute_les_castcodeurs_200px.png
 
-# old site feed redirected
-#RewriteRule feed/ http://lescastcodeurs.com/feed [R=301,L]
+# old feed redirected
+#RewriteRule feed/ http://lescastcodeurs.com/feed.atom [R=301,L]
 
 # Manual redirect form old URL scheme yyyy/mm to new blog yyyy/mm/dd
 RewriteRule 2009/03/en-construction[/]? http://lescastcodeurs.com/2009/03/25/en-construction/ [R=301,L]
