--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,9 @@ ErrorDocument 404 /404.html
 
 RewriteEngine on
 
+RewriteCond %{HTTP_HOST} ^(www\.)?castcodeurs\.com [NC]
+RewriteRule ^(.*)$ http://lescastcodeurs.com/$1 [R=301,L]
+
 RewriteCond %{HTTP_HOST} ^lescastcodeurs.com$ [OR]
 RewriteCond %{HTTP_HOST} ^www.lescastcodeurs.com$
 
