Fix google-analytics warning: Syntax has changed to site.google_analytics = { :account => 'UA-3479508-5' }

--- a/_config/site.yml
+++ b/_config/site.yml
@@ -6,7 +6,7 @@ profiles:
   production:
     base_url: http://lescastcodeurs.com/
 
-google_analytics: UA-3479508-5
+site.google_analytics: UA-3479508-5
 flattr_username: epbernard
 disqus: lescastcodeurs
 encoding: UTF-8
