Fix improper Google Analytics setting and migrate to Google Universal Analytics

--- a/_config/site.yml
+++ b/_config/site.yml
@@ -6,7 +6,8 @@ profiles:
   production:
     base_url: http://lescastcodeurs.com/
 
-site.google_analytics: UA-3479508-5
+google_analytics:
+  account: UA-3479508-5
 flattr_username: epbernard
 disqus: lescastcodeurs
 encoding: UTF-8
