--- a/_config/site.yml
+++ b/_config/site.yml
@@ -4,7 +4,7 @@ profiles:
   development:
     disqus_developer: true
   production:
-    base_url: http://lescastcodeurs.com/
+    base_url: https://lescastcodeurs.com/
 
 google_analytics:
   account: UA-3479508-5
