--- a/.htaccess
+++ b/.htaccess
@@ -26,9 +26,11 @@ RewriteRule ^podcast\-rss$ "https\:\/\/lescastcodeurs\.libsyn\.com\/rss" [R=302,
 # images
 RewriteRule ^img/jecoute_les_castcodeurs_200px.png$ https://lescastcodeurs.com/images/promo/jecoute_les_castcodeurs_200px.png [R=301,L]
 
-# old feed redirected
-RewriteRule ^feed/?$ "https\:\/\/lescastcodeurs\.com\/feed-intern\.atom" [R=301,L]
-RewriteRule ^feed\.atom$ "https\:\/\/lescastcodeurs\.com\/feed-intern\.atom" [R=301,L]
+# feed redirected
+## old feed
+RewriteRule ^feed/?$ "https\:\/\/lescastcodeurs\.com\/feed\.atom" [R=301,L]
+## new feed
+RewriteRule ^feed\.atom$ /feed-intern.atom [PT]
 ## old rule that was failing with a trailer /
 # RewriteRule ^feed[\/]?$ "https\:\/\/lescastcodeurs\.com\/feed\.atom" [R=301,L]
 
