--- a/.htaccess
+++ b/.htaccess
@@ -41,6 +41,9 @@ RewriteRule ^feed/$ https://lescastcodeurs.com/feed-intern.atom [R=301,L]
 # Manual redirect from incorrect URL with '
 RewriteRule 2016/05/04/lcc-146-interview-developpeurs-d’asie-avec-ludwine-probst[/]? https://lescastcodeurs.com/2016/05/04/lcc-146-interview-developpeurs-d-asie-avec-ludwine-probst/ [R=301,L]
 RewriteRule ^2016/05/04/lcc-146-interview-developpeurs-d$ https://lescastcodeurs.com/2016/05/04/lcc-146-interview-developpeurs-d-asie-avec-ludwine-probst/ [R=301,L]
+# Manual redirect from incorrect URL with ù
+RewriteRule 2018/02/01/lcc-183-l-episode-où-audrey-apprends-a-mixer/[/]? https://lescastcodeurs.com/2018/02/01/lcc-183-l-episode-ou-audrey-apprends-a-mixer/ [R=301,L]
+RewriteRule ^2018/02/01/lcc-183-l-episode-où-audrey-apprends-a-mixer/$ https://lescastcodeurs.com/2018/02/01/lcc-183-l-episode-ou-audrey-apprends-a-mixer/ [R=301,L]
 
 # Manual redirect form old URL scheme yyyy/mm to new blog yyyy/mm/dd
 RewriteRule 2009/03/en-construction[/]? https://lescastcodeurs.com/2009/03/25/en-construction/ [R=301,L]
