Intégration des sources du theme minima au site
Ça permettra d'avoir une bonne base pour structurer la construction de notre propre thème et ça nous évitera d'avoir à écrire certaines chose (notamment grâce aux includes disqus et google-analytics).

Les sources du thème minima qui ont été intégrées étaient celle de master (https://github.com/jekyll/minima/tree/a98a8fed7203738991b98d4f90a80dec3ebcf4f7) et non celle de la dernière version stable (2.5.1) afin de bénéficier d'améliorations non disponibles dans cette version (pagination par exemple).

--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,26 @@
 # Site settings
 title: 'Les Cast Codeurs Podcast'
-author: 'Les Cast Codeurs'
-email: 'commentaire@lescastcodeurs.com'
+url: 'https://lescastcodeurs.com/'
+author:
+  name: 'Les Cast Codeurs'
+  email: 'commentaire@lescastcodeurs.com'
 description: >-
   Les Cast Codeurs est un podcast en français de, par et pour les développeurs. Prenez connaissance des dernières nouvelles de la sphère Java et du
   développement en général. Plongez sur un sujet précis avec les épisodes interview.
-baseurl: ''
-url: 'https://lescastcodeurs.com/'
-twitter_username: 'lescastcodeurs'
-github_username:  'lescastcodeurs'
+
+show_excerpts: false
+minima:
+  date_format: '%d/%m/%Y'
+  social_links:
+    twitter: 'lescastcodeurs'
+    github:  'lescastcodeurs'
+    youtube: 'lescastcodeurs'
 
 # Build settings
-theme: 'minima'
 plugins:
   - 'jekyll-feed'
+  - 'jekyll-seo-tag'
+
 exclude:
   - '.idea'
   - '.jekyll-cache/'
