--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ minima:
     youtube: 'lescastcodeurs'
 
 # Build settings
+encoding: 'utf-8'
+timezone: 'Europe/Paris'
 plugins:
   - 'jekyll-feed'
   - 'jekyll-seo-tag'
