--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@ minima:
 # Build settings
 encoding: 'utf-8'
 timezone: 'Europe/Paris'
+permalink: '/:year/:month/:day/:title/'
 plugins:
   - 'jekyll-feed'
   - 'jekyll-seo-tag'
