Activation de la pagination
Pour cela une dépendance au plugin jekyll-paginate (https://jekyllrb.com/docs/pagination/) a été ajoutée.

La propriété paginate_path à été configurée pour matcher avec le modèle d'URL utilisé sur lescastcodeurs.com.

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,11 @@ minima:
 encoding: 'utf-8'
 timezone: 'Europe/Paris'
 permalink: '/:year/:month/:day/:title/'
+paginate: 10
+paginate_path: "/page/:num"
 plugins:
   - 'jekyll-feed'
+  - 'jekyll-paginate'
   - 'jekyll-seo-tag'
 
 exclude:
