--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,8 @@ minima:
     github:  'lescastcodeurs'
     youtube: 'lescastcodeurs'
 
+google_analytics: 'UA-3479508-5'
+
 # Build settings
 encoding: 'utf-8'
 timezone: 'Europe/Paris'
