--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ minima:
     youtube: 'lescastcodeurs'
 
 google_analytics: 'UA-3479508-5'
+disqus:
+  shortname: 'lescastcodeurs'
 
 # Build settings
 encoding: 'utf-8'
