--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,12 @@ google_analytics: 'UA-3479508-5'
 disqus:
   shortname: 'lescastcodeurs'
 
+defaults:
+  - scope:
+      path: "presentations/"
+    values:
+      sitemap: false
+
 # Build settings
 encoding: 'utf-8'
 timezone: 'Europe/Paris'
@@ -30,6 +36,7 @@ plugins:
   - 'jekyll-feed'
   - 'jekyll-paginate'
   - 'jekyll-seo-tag'
+  - 'jekyll-sitemap'
 
 exclude:
   - '.idea'
