Correction de l'URL du site dans la configuration
L'URL ne doit pas se terminer par un '/', sinon on se retrouve avec des '//' dans les URL quand on utilise le filtre absolute_url.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 'Les Cast Codeurs Podcast'
-url: 'https://lescastcodeurs.com/'
+url: 'https://lescastcodeurs.com'
 author:
   name: 'Les Cast Codeurs'
   email: 'commentaire@lescastcodeurs.com'
