Configuration de la langue du site
La langue par défaut pour minima était l'anglais, on passe au français par défaut.

--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ author:
 description: >-
   Les Cast Codeurs est un podcast en français de, par et pour les développeurs. Prenez connaissance des dernières nouvelles de la sphère Java et du
   développement en général. Plongez sur un sujet précis avec les épisodes interview.
+lang: 'fr'
 
 header_pages:
   - 'episodes.md'
