Migration de la page 'L'équipe'
- création de la collection team et du template de la page 'L'équipe'
- migration de la CSS
- correction de typos sur ArnaudHeritier.md et EmmanuelBernard.md
- découpage de la présentation sur GuillaumeLaforge.md pour un meilleur affichage

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,9 @@ description: >-
   développement en général. Plongez sur un sujet précis avec les épisodes interview.
 lang: 'fr'
 
+collections:
+  - 'team'
+
 header_pages:
   - 'episodes.html'
   - 'equipe.html'
