Ajout de l'enclosure au flux Atom
Le fichier a aussi été renommé pour qu'on ait la même URL que sur lescastcodeurs.com.

Le répertoire _ext a aussi été supprimé car à priori on a plus rien à y récupérer.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: 'Les Cast Codeurs Podcast'
 url: 'https://lescastcodeurs.com'
+podcast_url: 'https://traffic.libsyn.com/lescastcodeurs'
 author:
   name: 'Les Cast Codeurs'
   email: 'commentaire@lescastcodeurs.com'
@@ -33,7 +34,7 @@ sidebar_cards:
         file: 'episodes.html'
       - name: 'Feed'
         image: '/images/services/rss_32.png'
-        path: 'feed.xml'
+        file: 'feed.atom'
       - name: 'iTunes'
         image: '/images/services/itunes.jpg'
         url: 'https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewPodcast?id=312239675'
