Exclusion du README des ressources déployées sur le site

--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,7 @@ exclude:
   - 'Gemfile.lock'
   - 'node_modules/'
   - 'LICENSE'
+  - 'README.md'
   - 'vendor/bundle/'
   - 'vendor/cache/'
   - 'vendor/gems/'
