Création d'un guide de contribution
La documentation était un peu trop importante pour le README. Le contenu relatif au lancement du site et aux procédures en place a été déplacé dans cette page et le README enrichi avec les différentes manières de soutenir Les Cast Codeurs.

--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,7 @@ exclude:
   - '.idea'
   - '.jekyll-cache/'
   - '.sass-cache/'
+  - 'CONTRIBUTING.md'
   - 'gemfiles/'
   - 'Gemfile'
   - 'Gemfile.lock'
