Ajout de scripts pour faciliter la maintenance et la construction du site (closes #35)
La documentation a été mise à jour en conséquence.

--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ exclude:
   - '.jekyll-cache/'
   - '.sass-cache/'
   - 'CONTRIBUTING.md'
+  - 'bin'
   - 'gemfiles/'
   - 'Gemfile'
   - 'Gemfile.lock'
