--- a/bin/build
+++ b/bin/build
@@ -4,7 +4,7 @@ set -e
 
 bundle install
 bundle exec jekyll clean
-bundle exec jekyll build
+JEKYLL_ENV=production bundle exec jekyll build
 
 while [ $# -gt 0 ]
 do
