Utilisation des icônes bootstrap-icons à la place des icônes PNG
Remplacement des icônes PNG dans la sidebar et sur la page equipe.html par des icônes bootstrap-icons (https://icons.getbootstrap.com/).

Les icônes bootstrap-icons supportent beaucoup mieux le resize et ne nécessitent pas de requêtes supplémentaires pour être récupérées (puisqu'on utilise déjà bootstrap-icons pour l'icône 'search').

Certaines icônes n'ont malheureusement pas pu être remplacées à l'identique car non disponibles dans bootstrap-icons :
- Patreon
- iTunes
- Licence CC
- Google groups

Les images inutilisées ont par ailleurs été supprimées. Pour savoir si une image est inutilisée où non :
> for image in $(find images -type f); do echo "$image:"; grep --exclude-dir=.git -Ril "$(basename $image)" .; echo; done

--- a/_config.yml
+++ b/_config.yml
@@ -32,37 +32,46 @@ sidebar_cards:
   - name: 'Nous soutenir'
     links:
       - name: 'Patreon'
-        image: '/images/services/patreon.png'
+        icon: 'piggy-bank-fill'
+        color: 'piggy-pink'
         url: 'https://www.patreon.com/LesCastCodeurs'
   - name: 'Syndication'
     links:
       - name: 'Liste des épisodes'
-        image: '/images/list_32.png'
+        icon: 'music-note-list'
+        color: 'black'
         file: 'episodes.html'
       - name: 'Feed'
-        image: '/images/services/rss_32.png'
+        icon: 'rss-fill'
+        color: 'rss-orange'
         url: 'https://lescastcodeurs.com/podcast-rss'
       - name: 'iTunes'
-        image: '/images/services/itunes.jpg'
+        icon: 'music-note-beamed'
+        color: 'apple-podcast-violet'
         url: 'https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewPodcast?id=312239675'
       - name: 'Licence'
-        image: '/images/services/share_32.png'
+        icon: 'files'
+        color: 'black'
         file: 'licence.md'
   - name: 'Contacts'
     links:
       - name: 'Email'
-        image: '/images/services/email_32.png'
+        icon: 'envelope-fill'
+        color: 'black'
         url: 'mailto:commentaire@lescastcodeurs.com'
       - name: '@lescastcodeurs'
-        image: '/images/services/twitter_32.png'
+        icon: 'twitter'
+        color: 'twitter-blue'
         url: 'https://twitter.com/lescastcodeurs'
       - name: 'Crowdcast'
-        image: '/images/services/web_32.png'
+        icon: 'mic-fill'
+        color: 'mic-grey'
         file: 'crowdcasting.md'
   - name: 'Discuter'
     links:
       - name: 'Google groups'
-        image: '/images/services/google_groups.png'
+        icon: 'chat-dots'
+        color: 'google-group-blue'
         url: 'https://groups.google.com/group/lescastcodeurs'
 
 google_analytics: 'UA-3479508-5'
