--- a/_config.yml
+++ b/_config.yml
@@ -75,6 +75,10 @@ sidebar_cards:
         url: 'https://groups.google.com/group/lescastcodeurs'
 
 defaults:
+  - scope:
+      path: ""
+    values:
+      image: /images/default-twitter-card.png
   # jekyll-sitemap - excludes
   - scope:
       path: "presentations/"
