--- a/.htaccess
+++ b/.htaccess
@@ -20,6 +20,7 @@ RewriteCond %{HTTP_HOST} ^www.lescastcodeurs.com$
 # Generic redirect
 RewriteRule podsourcing[/]? https://lescastcodeurs.com/crowdcasting/ [R=301,L]
 RewriteRule crowdcast[/]?$ https://lescastcodeurs.com/crowdcasting/ [R=301,L]
+RewriteRule sondage[/]?$ https://docs.google.com/forms/d/e/1FAIpQLSc2xIWqWNi3ipx7Byth_TE6x9bQAvkCSuyeSkyEURbJNIga7g/viewform [R=301,L]
 
 # Libsyn feed
 RewriteRule ^podcast\-rss$ "http\:\/\/lescastcodeurs\.libsyn\.com\/rss" [R=302,L]
